testsuite/testcases/src/test/cases/unicode-blocks/unicode-blocks-f-flex.output
Reading "src/test/cases/unicode-blocks/unicode-blocks-f.flex"

Error in file "src/test/cases/unicode-blocks/unicode-blocks-f.flex" (line 52): 
Invalid Unicode property
\p{Block:This will never be a block name} { charBlock[ (int)yytext().charAt(0) ] = "Alphabetic Presentation Forms"; }
   ^
